--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,185 @@
 * {
+    box-sizing: border-box;
     padding: 0px;
     margin: 0px;
-
 }
 
-html {
-    scroll-behavior: smooth;
+body {
+    font-family: arial;
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
 }
 
-
-.menu {
-    background-color: darkblue;
-    height: 50px;
-    width: 100%;
-
-
-
-
+header {
+    /*            position: fixed;*/
+    /*            width: 100%;*/
+    background-color: #537153;
+    display: flex;
+    align-items: center;
+    padding: 15px 0;
 }
 
-.menu ul {
-    list-style: none;
-
-
-}
-
-li a {
-    text-decoration: none;
+header a {
     color: white;
 }
 
-.menu ul li {
-    background-color: darkblue;
-    height: 50px;
-    float: left;
-    width: 150px;
-    display: block;
+header ul {
+    list-style: none;
+    display: flex;
+}
 
+#logo {
+    margin: 0 auto;
+    font-size: 30px;
+}
+
+a {
+    text-decoration: none;
+}
+
+#menu ul {
+    margin-left: 20px;
+}
+
+#menu li {
+    padding: 10px;
+
+}
+
+#social-link ul {
+    margin-right: 20px;
+}
+
+#social-link li {
+    padding: 10px;
+}
+
+.services-container {
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.service-box {
+    border: 1px solid #eee;
+    padding: 10px;
+    flex-basis: 32%;
+    max-width: 370px;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.service-box img {
+    width: 100%;
+    max-height: 180px;
+}
+
+.main {
+    /*            margin-top: 60px;*/
+    display: flex;
+
+}
+
+aside {
+    flex: 0 0 20vw;
+    background-color: beige;
+    padding: 10px;
+}
+
+aside img {
+    width: 100%;
+    /*            height: 62%;*/
+    margin-top: 10px;
+}
+
+aside ul {
+    list-style: none;
+    padding: 0px;
     text-align: center;
-    font-family: sans-serif;
-    font-weight: bold;
-    font-size: 16px;
-    text-transform: uppercase;
-    line-height: 50px;
-    position: relative;
 }
 
-.menu ul li:hover {
-    background-color: #d060ba;
+aside ul a {
+    color: #537153;
+    padding: 10px;
+    display: block;
+    border-bottom: 1px solid #537153;
+
+
 }
 
-p {
+artical {
+    padding: 10px;
+}
+
+footer {
+    background-color: #537153;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    font-size: 20px
+}
+
+.call-to-action {
+    margin-top: 5px;
+    align-self: flex-start;
+    margin-top: auto;
+}
+
+.call-to-action a {
+    text-decoration: none;
+    background-color: grey;
+    color: white;
+    padding: 8px 13px;
+}
+
+.call-to-action a:hover {
+    background: transparent;
+    color: grey;
+    border: 1px solid grey;
+}
 
 
-    padding: 20px;
+@media screen and (max-width:850px) {
+    aside {
+        flex: 0 0 30vw;
+    }
+
+    .service-box {
+        border: 1px solid #eee;
+        padding: 10px;
+        flex-basis: 48%;
+
+
+    }
+}
+
+@media screen and (max-width:600px) {
+    header {
+        flex-direction: column;
+
+    }
+
+    #logo {
+        order: -1;
+    }
+
+    artical {
+        order: -1
+    }
+
+    .main {
+
+        flex-direction: column;
+    }
+
+    .services-container {
+        flex-direction: column;
+    }
+}
+
+h2 {
+    text-align: center;
 }
