--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ aside {
 
 aside img {
     width: 100%;
-    /*            height: 62%;*/
+    height: 310px;
     margin-top: 10px;
 }
 
@@ -154,6 +154,10 @@ footer {
 
 
     }
+
+    aside img {
+        height: 250px;
+    }
 }
 
 @media screen and (max-width:600px) {
@@ -177,6 +181,10 @@ footer {
 
     .services-container {
         flex-direction: column;
+    }
+
+    aside img {
+        display: none;
     }
 }
 
